--- a/README
+++ b/README
@@ -1,2 +1,42 @@
+FOP README
 
-	About the XML-Fop project...
+$Id$
+
+Contributed by
+Fotis Jannidis
+
+A. Compiling FOP
+
+1. Prerequisites
+
+a) Java 1.1.x or later
+
+b) XT from James Clark
+
+Some of the Java source code in FOP is generated from XML using
+XSLT. XT must be used to generate this code.
+
+XT is an xsl stylesheet processor written in java. At the moment you
+can't use any other processor, because the make file makes use of some
+proprietary features of Clark's xt which allow to write output in more
+then one document. You can find XT at <http://www.jclark.com/xml/xt.html>
+You have to use XT version 19991105 or later.
+
+(Under windows you shouldn't use the prepackaged xt.exe but also the
+generic jar file, otherwise make won't work)
+
+XT relies on an sax parser like XP (also J. Clark), which can be
+downloaded at <http://www.jclark.com/xml/xp/index.html>
+
+c) make
+
+Under windows it has been reported that the use of the cygnus
+solutions port of the GNU utilities works. You can find it at 
+<http://sourceware.cygnus.com/cygwin/>
+
+
+
+B. Running FOP
+[Here comes James Tauber's online doc]
+
+
