--- a/README
+++ b/README
@@ -13,4 +13,6 @@ FOP readme
 
     HTML-Documentation can be found in the subdirectory /docs. 
 
+    Compilation of Fop is started by executing build. It requires
+    Xerces-J, Xalan and bsf.jar (comes with Xalan) in your classpath.
 
