--- a/README
+++ b/README
@@ -14,5 +14,7 @@ FOP readme
     HTML-Documentation can be found in the subdirectory /docs. 
 
     Compilation of Fop is started by executing build. It requires
-    Xerces-J, Xalan and bsf.jar (comes with Xalan) in your classpath.
+    Xerces-J, Xalan and bsf.jar (comes with Xalan) in your classpath. 
+    You can find more details in build.xml or in the documentation under the 
+    heading 'compiling'.
 
